# ros_marsarm

./: .gitignore  README.md
MPF_Cylinder/: calc_weight.m  create_particles.m  particle_filter.m  test.m  update_particles.m
MPF_Plane/: create_particles.m  particle_filter.m  update_particles.m
MPF_Plane/MPF_Plane/MPF_Plane/: particleFilter.h
MPF_Plane_Rejection/: particle_filter.m  resample_particles.m  test.m  update_particles.m
MPF_Plane_Rejection/MPF_Plane_Rejection/MPF_Plane/: MPF_Plane.vcxproj  MPF_Plane.vcxproj.filters  _Particle Filter.cpp  particleFilter.cpp
MPF_Plane_Rejection_6DOF/: calc_weight.m  create_particles.m  particle_filter.m  update_particles.m
MPF_Plane_v2/: particle_filter.m  update_particles.m
MPF_Rejection_6DOF_Distance/: binaryCube.STL  distance_transform.m  distance_transform_1D.m  particle_filter.m  test2.m  update_particles.m  voxelization.m  voxelization_boeing.m  voxelization_raycasting.m
MPF_Rejection_6DOF_Distance/MPF_Plane_Rejection_6DOF/MPF_Plane/: _particleFilter.cpp  distanceTransform.h  particleFilter.cpp  particleFilter.h
MPF_Rejection_6DOF_Distance/MPF_Rejection_6DOF/MPF_Plane/: MPF_Plane.vcxproj.filters  distanceTransform.h  particleFilter.cpp  particleFilter.h
MPF_Rejection_6DOF_Distance/MPF_Rejection_6DOF_sub_df/MPF_Plane/: MPF_Plane.vcxproj  _distanceTransform.h  matrix.h  particleFilter.cpp
MPF_Rejection_6DOF_Distance/MPF_Rejection_6DOF_sub_df_cube/MPF_Plane/: distanceTransform.h  particleFilter.h
MPF_Rejection_6DOF_Distance/MPF_Rejection_6DOF_sub_df_voxelize - Copy (2)/: MPF.VC.opendb
MPF_Rejection_6DOF_Distance/MPF_Rejection_6DOF_sub_df_voxelize - Copy (2)/MPF_Plane/: MPF_Plane.vcxproj  MPF_Plane.vcxproj.filters  distanceTransform.h  particleFilter.cpp  particleFilter.h  test.cpp  tribox.h
MPF_Rejection_6DOF_Distance/MPF_Rejection_6DOF_sub_df_voxelize/MPF_Plane/: MPF_Plane.vcxproj  MPF_Plane.vcxproj.filters  distanceTransform.h  particleFilter.cpp  particleFilter.h  raytri.h  stlParser.h  tribox.h
MPF_Rejection_6DOF_Distance/MPF_Rejection_6DOF_sub_df_voxelize_boeing/: MPF.sln  MPF_Boeing.sln
MPF_Rejection_6DOF_Distance/MPF_Rejection_6DOF_sub_df_voxelize_boeing/MPF_Plane/: MPF_Plane.vcxproj  MPF_Plane.vcxproj.filters  distanceTransform.cpp  distanceTransform.h  particleFilter.cpp  particleFilter.h  stlParser.cpp  tribox.cpp  tribox.h
MPF_Rejection_6DOF_Distance/MPF_Rejection_6DOF_sub_df_voxelize_boeing/MPF_Rejection_6DOF/: distanceTransform.cpp  distanceTransform.h  matrix.cpp  matrix.h  particleFilter.cpp  particleFilter.h  raytri.cpp  raytri.h  stlParser.cpp  stlParser.h
PF_Plane/: calc_log_likelihood.m  create_particles.m  particle_filter.m  resample_particles.m  test.m  update_particles.m
data/: MeanCov_March1_2017.txt  MeanCov_Sept1_2016.txt  MeanCov_prior.txt  On_Robot_Ang.fig  On_Robot_Trans.fig  mean_err.mat  mean_err.txt  sortData.m  sortData_prior.m
src/: .rosinstall
src/custom_ray_trace/: CMakeLists.txt  package.xml
src/custom_ray_trace/include/custom_ray_trace/: BBox.h  BVH.h  IntersectionInfo.h  Object.h  Triangle.h  Vector3.h  bvhRay.h  calcEntropy.h  plotRayUtils.h  plucker.h  ray.h  rayTrace.h  rayTracePlotter.h  rayTracer.h  stlParser.h
src/custom_ray_trace/sdf/: J1_section.stl  back_datum.stl  boeing_part.stl  boeing_part_full_rotated.stl  bottom_section.stl  goal_hole.blend  goal_hole.stl  right_dataum.blend  right_datum.stl  top_datum.blend  top_datum.blend1  top_datum.stl
src/custom_ray_trace/src/: BBox.cpp  BVH.cpp  calcEntropy.cpp  imageMaker.cpp  linePlot.cpp  plotRayUtils.cpp  ray.cpp  rayPlot.cpp  rayTrace.cpp  rayTracePlotter.cpp  rayTraceTestingClient.cpp  rayTracer.cpp  stlParser.cpp
src/custom_ray_trace/worlds/: box.world  flat_plate.world
src/gazebo_ray_trace/: #CMakeLists.txt#  CMakeLists.txt  CMakeLists.txt~  package.xml
src/gazebo_ray_trace/hpp/: calcEntropy.h  plotRayUtils.h
src/gazebo_ray_trace/include/gazebo_ray_trace/: calcEntropy.h  plotRayUtils.h  rayTracePluginUtils.h
src/gazebo_ray_trace/launch/: headless_ray_tracing_service.launch  hello.launch  test_ray_tracing.launch
src/gazebo_ray_trace/src/: calcEntropy.cpp  gridOfRays.cpp  igManual.cpp  nonNormal.cpp  plotRayUtils.cpp  rayTracePlotter.cpp  rayTracePluggin.cpp  rayTracePlugin.cpp  rayTracePluginUtils.cpp  rayTraceService.cpp  rayTraceTestingClient.cpp  touchLocalizationPlugin.cpp
src/gazebo_ray_trace/srv/: RayTrace.srv  RayTraceCylinder.srv
src/gazebo_ray_trace/worlds/: boeing_part.world  box.world  box.world~  flat_plate.world
src/gazebo_tutorials/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/gazebo_tutorials/launch/: willow_garage.launch
src/gazebo_tutorials/msgs/: collision_map_request.proto
src/gazebo_tutorials/src/: collision_map_creator.cc
src/ipc_ros_bridge/: CMakeLists.txt  package.xml
src/ipc_ros_bridge/src/: TestBridge.cpp
src/marsarm_moveit/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  particles.rviz  robot.rviz
src/marsarm_moveit/launch/: marsarm_with_particles.launch  marsarm_with_particles.launch~  simpleDisplay.launch  simple_move_group.launch~
src/marsarm_moveit/msg/: Joints.msg
src/marsarm_moveit/src/: joint_testing_client.cpp  marsarm_basic_moveit.cpp
src/marsarm_moveit/urdf/: marsarm.urdf
src/marsarm_moveit_generated/: .setup_assistant  CMakeLists.txt  package.xml
src/marsarm_moveit_generated/config/: Mars_Arm.srdf  (+3 more)
src/particle_filter/: CMakeLists.txt  package.xml
src/touch_optimization/: CMakeLists.txt  package.xml
src/using_markers/: CMakeLists.txt  package.xml
src/using_markers/launch/: #particles.launch#  #test.launch#  particles.launch  test.launch~
src/using_markers/src/: #plotShape.h#  #points_and_lines.cpp#  .#plotShape.h  basic_shapes.cpp  datums.rviz  listener_copy.cpp  listener_copy.cpp~  plotParticles.cpp  plotParticles.cpp~  plotShape.cpp  plotShape.cpp~  plotShape.h~  points_and_lines.cpp~  rviz_config.rviz  simpleShape.cpp  simpleShape.cpp~  simpleShape.h  simpleShape.h~  simulation.rviz  twoEdges.rviz  two_plates.rviz  uncertain_part.rviz
(+107 files in other folders)
